--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,8 @@
-<!-- /* //Button Search CSS */ -->
-    
-  <style>
+<style>
+  body {
+    padding-top: 0.5rem; /* prevent overlap from sticky-top navbar */
+  }
+
   .btn-search {
     background-color: #fe424d;
     color: white;
@@ -13,10 +15,6 @@
     color: white;
   }
 
-  .search {
-    display: flex;
-  }
-
   .fa-magnifying-glass {
     margin-right: 0.5rem;
     padding-left: 1rem;
@@ -26,57 +24,95 @@
     padding-right: 1rem;
   }
 
-  .inp-search{
+  .inp-search {
     border-radius: 25px;
-    padding: 0.5rem 3rem 0.5rem 3rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    min-width: 180px;
   }
 
-</style>
+  /* Responsive Fixes */
+  @media (max-width: 576px) {
+    .search-form-wrapper {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 0.5rem;
+    }
 
+    .inp-search,
+    .btn-search {
+      width: 100%;
+    }
+
+    .tax-toggle-mobile {
+      display: block;
+      margin-top: 1rem;
+      text-align: center;
+    }
+
+    .tax-toggle-desktop {
+      display: none !important;
+    }
+
+    .navbar-collapse {
+      background-color: white;
+      padding: 1rem;
+      border-radius: 0 0 10px 10px;
+    }
+
+    .navbar-nav {
+      text-align: center;
+    }
+  }
+
+  @media (min-width: 577px) {
+    .tax-toggle-mobile {
+      display: none !important;
+    }
+
+    .tax-toggle-desktop {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+  }
+</style>
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/listings"
-      ><i class="fa-regular fa-compass"></i
-    ></a>
+    <!-- Brand -->
+    <a class="navbar-brand" href="/listings">
+      <i class="fa-regular fa-compass"></i>
+    </a>
+
+    <!-- Hamburger Menu -->
     <button
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <!-- Collapsible Content -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <!-- Left Nav -->
       <div class="navbar-nav">
-        <a class="nav-link" href="/listings"> Explore </a>
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <div class="navbar-nav ms-auto search">
-        <form class="d-flex" role="search">
-          <input class="form-control me-2 inp-search" type="search" placeholder="Search  Destinations" />
-          <button class="btn btn-search" type="submit">
-            <div class="search">
-              <div>
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </div>
-              <div class="dup-search">Search</div>
-            </div>
-          </button>
-        </form>
-      </div>
+      <!-- Right Auth Links -->
+      <div class="navbar-nav ms-md-auto text-center text-md-start mt-3 mt-md-0">
+        <a class="nav-link" href="/listings/new">Airbnb your home</a>
 
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="/listings/new"> Airbnb your home </a>
-        <% if(!currUser) { %>
-        <a class="nav-link" aria-current="page" href="/signUp"
-          ><b>Sign In</b></a
-        >
-        <a class="nav-link" href="/Login"><b> Login</b> </a>
-
-        <% } %> <% if(currUser) { %>
-        <a class="nav-link" href="/logout"><b> Logout</b> </a>
-
+        <% if (!currUser) { %>
+          <a class="nav-link" href="/signUp"><b>Sign Up</b></a>
+          <a class="nav-link" href="/Login"><b>Login</b></a>
+        <% } else { %>
+          <a class="nav-link" href="/logout"><b>Logout</b></a>
         <% } %>
       </div>
     </div>
